Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43716

[iOS] When programatically calling select() in response to clicking in a TextEdit then the selection may not show up

XMLWordPrintable

      [iOS] When programatically calling select() in response to clicking in a TextEdit then the selection may not show up. In the attached example click on the white area to have it select the 0->5 range inside the TextEdit. Then click inside the text so it deselects and then click in the white area again. Note that the cursor has moved to position 5, but there is no selection.

      This only happens if the soft keyboard is visible, as it is related to the input method events which end up causing the selection to change twice.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes